# KJE-JEK

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  index.html  package.json  tsconfig.json  vite.config.ts
backend/: .pylintrc  Makefile  pyproject.toml
backend/docker/modak/: Dockerfile
backend/src/modak/: logging_config.yaml  main.py
backend/src/modak/comments/: controller.py  enums.py  model.py  repository.py  schema.py  service.py
backend/src/modak/common/: custom_exception_handlers.py  custom_exceptions.py  enum.py  logger.py  paths.py  response_fail.py  settings.py  utils.py
backend/src/modak/database/: database.py  exceptions.py  models.py  utils.py
backend/src/modak/envs/: common.env  database.env
frontend/: Makefile  index.html  package.json
frontend/conf/conf.d/: default.conf
frontend/docker/modak-front/: Dockerfile
frontend/src/: App.tsx  index.css
frontend/src/color/: colorPalette.ts
frontend/src/component/common/: Button.tsx  MainTitle.tsx  PageTitle.tsx  index.ts
frontend/src/component/section/: GuideContent.tsx  InviteTicket.tsx  ProjectModak.tsx  Title.tsx  WeddingInfo.tsx  WeddingPicture.tsx  (+1 more)
frontend/src/pages/: Page.tsx
src/: colorPalette.ts  index.css
src/color/: colorPalette.ts
src/component/: Title.tsx  index.ts
src/component/common/: Layout.tsx  MainTitle.tsx  PageTitle.tsx  index.ts
src/component/section/: Comment.tsx  GuideContent.tsx  InviteTicket.tsx  ProjectModak.tsx  Title.tsx  WeddingInfo.tsx  WeddingPicture.tsx  WhoIsModak.tsx
src/content/: index.ts
src/pages/: Page.tsx
(+6 files in other folders)
