[tool.poetry]
name = "modaki"
version = "0.1.0"
description = "FastAPI backend for the Project Modak"
authors = ["Jooeon Kim <joo2theeon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
